[package]
name = "redmine-api"
description = "API for the Redmine issue tracker"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.11.1"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
repository = "https://github.com/taladar/redmine-api"
keywords = ["redmine", "api"]
categories = ["api-bindings"]
edition = "2024"
exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.0"
derive_builder = "0.20.2"
derive_more = { version = "2.1.1", features = ["debug"] }
envy = "0.4.2"
futures = "0.3.31"
pin-project = "1.1.10"
reqwest = { version = "0.13.1", default-features = false, features = [ "blocking", "json" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.148"
serde_repr = "0.1.20"
serde_with = "3.16.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [ "macros", "serde", "serde-human-readable" ] }
tracing = { version = "0.1.44", features = [ "log" ] }
url = "2.5.7"

[dev-dependencies]
dotenvy = "0.15.7"
finally-block = "0.2.0"
function_name = "0.3.0"
pretty_assertions = "1.4.1"
reqwest = { version = "0.13.1", default-features = false, features = [ "charset", "http2", "rustls" ] }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing-test = "0.2.5"

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true
